--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,9 +24,9 @@
 
 		<!-- Global CSS -->
 		<link rel="stylesheet" href="{{ asset('css/front/css/about.css')}}">
+		<link rel="stylesheet" href="{{ asset('css/front/css/processus.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/new.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/app.css')}}">
-		<link rel="stylesheet" href="{{ asset('css/front/css/processus.css') }}">
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -103,36 +103,38 @@
 			{#  <script src="{{ asset('js/particles.js')}}"></script>#}
 			{#	<script src="{{ asset('js/app.js')}}"></script> #}
 			<script>
-				const navbarMenu = document.getElementById("menu");
-				const burgerMenu = document.getElementById("burger");
-				const headerMenu = document.getElementById("header");
-				const overlayMenu = document.querySelector(".overlay");
+				document.addEventListener("DOMContentLoaded", function() {
+					const navbarMenu = document.getElementById("menu");
+					const burgerMenu = document.getElementById("burger");
+					const headerMenu = document.getElementById("header");
+					const overlayMenu = document.querySelector(".overlay");
 
-				// Open Close Navbar Menu on Click Burger
-				if (burgerMenu && navbarMenu) {
-					burgerMenu.addEventListener("click", () => {
-						burgerMenu.classList.toggle("is-active");
-						navbarMenu.classList.toggle("is-active");
-					});
-				}
-
-				// Close Navbar Menu on Click Links
-				document.querySelectorAll(".menu-link").forEach((link) => {
-					link.addEventListener("click", () => {
-						burgerMenu.classList.remove("is-active");
-						navbarMenu.classList.remove("is-active");
-					});
-				});
-
-				// Fixed Navbar Menu on Window Resize
-				window.addEventListener("resize", () => {
-					if (window.innerWidth >= 992) {
-						if (navbarMenu.classList.contains("is-active")) {
-							navbarMenu.classList.remove("is-active");
-							overlayMenu.classList.remove("is-active");
-						}
+					// Open Close Navbar Menu on Click Burger
+					if (burgerMenu && navbarMenu) {
+						burgerMenu.addEventListener("click", () => {
+							burgerMenu.classList.toggle("is-active");
+							navbarMenu.classList.toggle("is-active");
+						});
 					}
-				});
+
+					// Close Navbar Menu on Click Links
+					document.querySelectorAll(".menu-link").forEach((link) => {
+						link.addEventListener("click", () => {
+							burgerMenu.classList.remove("is-active");
+							navbarMenu.classList.remove("is-active");
+						});
+					});
+
+					// Fixed Navbar Menu on Window Resize
+					window.addEventListener("resize", () => {
+						if (window.innerWidth <= 750) {
+							if (navbarMenu.classList.contains("is-active")) {
+								navbarMenu.classList.remove("is-active");
+								overlayMenu.classList.remove("is-active");
+							}
+						}
+					})
+				})
 			</script>
 			<script>
 				document.getElementById('accept-cookies').addEventListener('click', function() {
