--- a/public/css/front/css/processus.css
+++ b/public/css/front/css/processus.css
@@ -51,7 +51,7 @@
     line-height: 1.5;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 350px) {
     .process {
         display: inline-block;
     }
