--- a/templates/front/contact/email.html.twig
+++ b/templates/front/contact/email.html.twig
@@ -1,6 +1,7 @@
-<h2>Nouveau message de contact</h2>
+<h2>Voici un récapitulatif de votre demande sur la plateforme <a href="https://scriptzenit.fr">ScriptZenIT</a></h2>
 <p><strong>Prénom :</strong> {{ contact.firstName }}</p>
 <p><strong>Nom :</strong> {{ contact.lastName }}</p>
 <p><strong>Email :</strong> {{ contact.email }}</p>
 <p><strong>Téléphone :</strong> {{ contact.phone }}</p>
 <p><strong>Service :</strong> {{ contact.service == 'web' ? 'Développement Web' : 'Autres' }}</p>
+<p><strong>Message :</strong> {{ contact.content }}</p>
