added padding to thanks you index page and added placeholder to content contact

--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -63,6 +63,9 @@
     text-align: center;
 }
 
+.thank-you{
+    padding: 50px;
+}
 @media screen and (min-width: 1024px) {
     .home_background{
         padding-top: 9rem;
