--- a/templates/front/contact/email.html.twig
+++ b/templates/front/contact/email.html.twig
@@ -3,5 +3,5 @@
 <p><strong>Nom :</strong> {{ contact.lastName }}</p>
 <p><strong>Email :</strong> {{ contact.email }}</p>
 <p><strong>Téléphone :</strong> {{ contact.phone }}</p>
-<p><strong>Service :</strong> {{ contact.service == 'web' ? 'Développement Web' : 'Autres' }}</p>
+<p><strong>Service :</strong> {{ contact.service }}</p>
 <p><strong>Message :</strong> {{ contact.content }}</p>
