--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -82,7 +82,7 @@
                                     <div class="right-column">
                                         {{ form_row(form.phone, {'attr': {'class': 'form-control', 'placeholder': 'Téléphone'}}) }}
                                         {{ form_row(form.service) }}
-                                        {{ form_row(form.content) }}
+                                        {{ form_row(form.content, {'attr': {'class': 'form-control', 'placeholder': 'Votre demande en quelques mots ...'}}) }}
                                         <input type="submit" class="button btn-send disabled" value="Envoyer la demande">
                                     </div>
                                 </div>
