--- a/templates/back/user/edit.html.twig
+++ b/templates/back/user/edit.html.twig
@@ -4,15 +4,18 @@
 {% endblock %}
 
 {% block content %}
-	<h1>Modifier l'utilisateur</h1>
+	<div class="container">
+		<h1>Modifier l'utilisateur</h1>
 
-	{{ form_start(form) }}
-	{{ form_row(form.email) }}
-	{{ form_row(form.password, { 'label': 'Nouveau mot de passe', 'required': false }) }}
-	{{ form_row(form.nom) }}
-	{{ form_row(form.prenom) }}
-	<button type="submit">Mettre à jours</button>
-	{{ form_end(form) }}
+		{{ form_start(form) }}
+		{{ form_row(form.email) }}
+		{{ form_row(form.password, { 'label': 'Nouveau mot de passe', 'required': false }) }}
+		{{ form_row(form.nom) }}
+		{{ form_row(form.prenom) }}
+		<button type="submit">Mettre à jours</button>
+		{{ form_end(form) }}
 
-	<a href="{{ path('back_user_index') }}">Retour</a>
+		<a href="{{ path('back_user_index') }}">Retour</a>
+	</div>
+
 {% endblock %}
