--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -86,7 +86,7 @@
 					<p>Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre. Ne laissez pas les obstacles vous décourager. Au contraire, laissez-moi vous guider vers des solutions brillantes qui illuminent votre parcours.</p>
 				</div>
 				<div class="col-md-6">
-					<img src="{{ asset('img/presentation.png') }}" alt="agence web dans la Nièvre (58)">
+					<img src="{{ asset('img/presentation.svg') }}" alt="agence web dans la Nièvre (58)">
 				</div>
 			</div>
 		</div>
