--- a/templates/front/ticket/create_message.html.twig
+++ b/templates/front/ticket/create_message.html.twig
@@ -5,40 +5,43 @@
 
 {% block content %}
 
-	{% if devisList is not empty %}
-		<h1>Créer un ticket</h1>
+	<div class="container">
+		{% if devisList is not empty %}
+			<h1>Créer un ticket</h1>
 
-		{{ form_start(form) }}
-		<div>
-			{{ form_label(form.content) }}
-			{{ form_widget(form.content) }}
-		</div>
-		<div>
-			{{ form_label(form.priority) }}
-			{{ form_widget(form.priority) }}
-		</div>
-		<div>
-			{{ form_label(form.status) }}
-			{{ form_widget(form.status) }}
-		</div>
-		<div>
-			{{ form_label(form.receiver)}}
-			{{ form_widget(form.receiver)}}
-		</div>
+			{{ form_start(form) }}
+			<div>
+				{{ form_label(form.content) }}
+				{{ form_widget(form.content) }}
+			</div>
+			<div>
+				{{ form_label(form.priority) }}
+				{{ form_widget(form.priority) }}
+			</div>
+			<div>
+				{{ form_label(form.status) }}
+				{{ form_widget(form.status) }}
+			</div>
+			<div>
+				{{ form_label(form.receiver)}}
+				{{ form_widget(form.receiver)}}
+			</div>
 
-		<div>
-			{{ form_label(form.devis) }}
-			{{ form_widget(form.devis) }}
-		</div>
+			<div>
+				{{ form_label(form.devis) }}
+				{{ form_widget(form.devis) }}
+			</div>
 
-		<div>
-			{{ form_label(form.attachment) }}
-			{{ form_widget(form.attachment) }}
-		</div>
+			<div>
+				{{ form_label(form.attachment) }}
+				{{ form_widget(form.attachment) }}
+			</div>
 
-		<button type="submit">Envoyer le message</button>
-		{{ form_end(form) }}
-	{% else %}
-		<p>Aucun devis trouvé pour cet utilisateur.</p>
-	{% endif %}
+			<button type="submit">Envoyer le message</button>
+			{{ form_end(form) }}
+		{% else %}
+			<p>Aucun devis trouvé pour cet utilisateur.</p>
+		{% endif %}
+	</div>
+
 {% endblock %}
