--- a/templates/back/devis/edit.html.twig
+++ b/templates/back/devis/edit.html.twig
@@ -4,21 +4,24 @@
 {% endblock %}
 
 {% block content %}
-	<h1>Modifier le devis</h1>
+	<div class="container">
+		<h1>Modifier le devis</h1>
 
-	{{ form_start(formDevis) }}
-	{{ form_widget(formDevis.email) }}
-	{{ form_widget(formDevis.type_de_site_web) }}
-	{{ form_widget(formDevis.attentes_design_web) }}
-	{{ form_widget(formDevis.description_projet)}}
-	{% if is_granted('ROLE_ADMIN') %}
-		Status :
-		{{ form_widget(formDevis.statut, {attr: {style: 'display:block'}}) }}
-		Prix :
-		{{ form_widget(formDevis.prix, {attr: {style: 'display:block'}}) }}
-	{% endif %}
-	<button type="submit">Enregistrer</button>
-	{{ form_end(formDevis) }}
+		{{ form_start(formDevis) }}
+		{{ form_widget(formDevis.email) }}
+		{{ form_widget(formDevis.type_de_site_web) }}
+		{{ form_widget(formDevis.attentes_design_web) }}
+		{{ form_widget(formDevis.description_projet)}}
+		{% if is_granted('ROLE_ADMIN') %}
+			Status :
+			{{ form_widget(formDevis.statut, {attr: {style: 'display:block'}}) }}
+			Prix :
+			{{ form_widget(formDevis.prix, {attr: {style: 'display:block'}}) }}
+		{% endif %}
+		<button type="submit">Enregistrer</button>
+		{{ form_end(formDevis) }}
 
-	<a href="{{ path('back_devis_show', {'id': devis.id}) }}">Annuler</a>
+		<a href="{{ path('back_devis_show', {'id': devis.id}) }}">Annuler</a>
+	</div>
+
 {% endblock %}
