--- a/templates/back/user/index.html.twig
+++ b/templates/back/user/index.html.twig
@@ -4,38 +4,42 @@
 {% endblock %}
 
 {% block content %}
-	<h1>Liste des utilisateurs</h1>
+	<div class="container-fluid">
+		<h1>Liste des utilisateurs</h1>
 
-	<a href="{{ path('back_user_new') }}">Créer un nouveau utilisateur</a>
-
-	<table>
-		<thead>
-			<tr>
-				<th>#</th>
-				<th>Email</th>
-				<th>Nom</th>
-				<th>Prenom</th>
-				<th>Actions</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for user in users %}
+		<a href="{{ path('back_user_new') }}">Créer un nouveau utilisateur</a>
+		<div class="table-responsive">
+			<table>
+				<thead>
 				<tr>
-					<td>{{ user.id }}</td>
-					<td>{{ user.email }}</td>
-					<td>{{ user.nom }}</td>
-					<td>{{ user.prenom }}</td>
-					<td>
-						<a href="{{ path('back_user_show', {'id': user.id}) }}">Afficher</a>
-						<a href="{{ path('back_user_edit', {'id': user.id}) }}">Modifier</a>
-						<form action="{{ path('back_user_delete', {'id': user.id}) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this user?')">
-							<input type="hidden" name="_method" value="DELETE">
-							<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-							<button type="submit">Supprimer</button>
-						</form>
-					</td>
+					<th>#</th>
+					<th>Email</th>
+					<th>Nom</th>
+					<th>Prenom</th>
+					<th>Actions</th>
 				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+				</thead>
+				<tbody>
+				{% for user in users %}
+					<tr>
+						<td>{{ user.id }}</td>
+						<td>{{ user.email }}</td>
+						<td>{{ user.nom }}</td>
+						<td>{{ user.prenom }}</td>
+						<td>
+							<a href="{{ path('back_user_show', {'id': user.id}) }}">Afficher</a>
+							<a href="{{ path('back_user_edit', {'id': user.id}) }}">Modifier</a>
+							<form action="{{ path('back_user_delete', {'id': user.id}) }}" method="POST" onsubmit="return confirm('Are you sure you want to delete this user?')">
+								<input type="hidden" name="_method" value="DELETE">
+								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+								<button type="submit">Supprimer</button>
+							</form>
+						</td>
+					</tr>
+				{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
+
 {% endblock %}
