--- a/templates/back/user/new.html.twig
+++ b/templates/back/user/new.html.twig
@@ -4,15 +4,18 @@
 {% endblock %}
 
 {% block content %}
-	<h1>New User</h1>
+	<div class="container">
+		<h1>Nouveau utilisateur</h1>
 
-	{{ form_start(form) }}
-	{{ form_row(form.email) }}
-	{{ form_row(form.password) }}
-	{{ form_row(form.nom) }}
-	{{ form_row(form.prenom) }}
-	<button type="submit">Créer</button>
-	{{ form_end(form) }}
+		{{ form_start(form) }}
+		{{ form_row(form.email) }}
+		{{ form_row(form.password) }}
+		{{ form_row(form.nom) }}
+		{{ form_row(form.prenom) }}
+		<button type="submit">Créer</button>
+		{{ form_end(form) }}
 
-	<a href="{{ path('back_user_index') }}">Retour</a>
+		<a href="{{ path('back_user_index') }}">Retour</a>
+	</div>
+
 {% endblock %}
