--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,54 +5,64 @@
 
 {% block content %}
 
+	<div class="container">
+		{% for type, messages in app.flashes %}
+			{% for message in messages %}
+				<div class="alert alert-{{ type }}">{{ message }}</div>
+			{% endfor %}
+		{% endfor %}
+	</div>
+
 	{% if app.user %}
-		<div class="mb-3">
+		<div class="container mb-3">
 			Vous êtes connecté en tant que
 			{{ app.user.userIdentifier }},
 			<a href="{{ path('app_logout') }}">Déconnexion</a>
 		</div>
-	{% endif %}
-
-	<div class="container col-xl-10 col-xxl-8 px-4 py-5">
-		<div class="row align-items-center g-lg-5 py-5">
-			<div class="col-lg-7 text-center text-lg-start">
-				<h1 class="display-4 fw-bold lh-1 mb-3">Heureux de vous revoir !</h1>
-				<div class="register">
-					<h6>Vous n'ètes pas membre ?</h6>
-					<p>Inscrivez-vous en suivant ce lien <a href="{{ url('app_register') }}">Je m'inscris</a>.</p>
-				</div>
-			</div>
-			<div class="col-md-10 mx-auto col-lg-5">
-				<form class="p-4 p-md-5 border rounded-3" method="post" action="{{ url('app_login')}}">
-					<div class="form-group mb-3">
-						<label for="floatingInput">E-mail</label>
-						<input type="email" class="form-control" value="{{ last_username }}" id="floatingInput" placeholder="L'adresse saisie pour l'inscription" name="email">
-					</div>
-					<div class="form-group mb-3">
-						<label for="floatingPassword">Mot de passe</label>
-						<input type="password" class="form-control" id="floatingPassword" placeholder="Mot de passe" name="password">
-					</div>
-					<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-					{% if error %}
-						<div class="alert alert-danger">Identifiant ou mot de passe incorect.</div>
-					{% endif %}
-					<div class="flex items-center justify-between forgot-password mb-3">
-						<h3><strong>Vous avez du mal à vous connecter ?</strong></h3>
-						<div class="text-sm">
-							<a href="{{ url('request_reset_password') }}" class="font-medium text-indigo-600 hover:text-indigo-500">J'ai oublié mon mot de passe.</a>
+		{% else %}
+			<div class="container col-xl-10 col-xxl-8 px-4 py-5">
+				<div class="row align-items-center g-lg-5 py-5">
+					<div class="col-lg-7 text-center text-lg-start">
+						<h1 class="display-4 fw-bold lh-1 mb-3">Heureux de vous revoir !</h1>
+						<div class="register">
+							<h6>Vous n'êtes pas membre ?</h6>
+							<p>Inscrivez-vous en suivant ce lien <a href="{{ url('app_register') }}">Je m'inscris</a>.</p>
 						</div>
 					</div>
-					<div class="checkbox mb-3">
-						<label>
-							<input type="checkbox" name="_remember_me">
-							Se souvenir de moi
-						</label>
+					<div class="col-md-10 mx-auto col-lg-5">
+						<form class="p-4 p-md-5 border rounded-3" method="post" action="{{ url('app_login')}}">
+							<div class="form-group mb-3">
+								<label for="floatingInput">E-mail</label>
+								<input type="email" class="form-control" value="{{ last_username }}" id="floatingInput" placeholder="L'adresse saisie pour l'inscription" name="email">
+							</div>
+							<div class="form-group mb-3">
+								<label for="floatingPassword">Mot de passe</label>
+								<input type="password" class="form-control" id="floatingPassword" placeholder="Mot de passe" name="password">
+							</div>
+							<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+							{% if error %}
+								<div class="alert alert-danger">Identifiant ou mot de passe incorect.</div>
+							{% endif %}
+							<div class="flex items-center justify-between forgot-password mb-3">
+								<h3><strong>Vous avez du mal à vous connecter ?</strong></h3>
+								<div class="text-sm">
+									<a href="{{ url('request_reset_password') }}" class="font-medium text-indigo-600 hover:text-indigo-500">J'ai oublié mon mot de passe.</a>
+								</div>
+							</div>
+							<div class="checkbox mb-3">
+								<label>
+									<input type="checkbox" name="_remember_me">
+									Se souvenir de moi
+								</label>
+							</div>
+							<button class="w-100 btn btn-lg btn-primary" type="submit">
+								Me connecter
+							</button>
+						</form>
 					</div>
-					<button class="w-100 btn btn-lg btn-primary" type="submit">
-						Me connecter
-					</button>
-				</form>
+				</div>
 			</div>
-		</div>
-	</div>
+	{% endif %}
+
+
 {% endblock %}
