--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -89,6 +89,61 @@
 					<img src="{{ asset('img/presentation.svg') }}" alt="agence web dans la Nièvre (58)">
 				</div>
 			</div>
+			<div class="wrapper">
+				<div id="content" class="container page-content site-content single-post" role="main">
+					<div class="row">
+						<div class="col-xs-12 col-sm-12">
+							<!-- Portfolio Content -->
+							<div id="portfolio_content_q" class="portfolio-content">
+								<ul class="portfolio-filters">
+									<li>
+										<a class="filter btn btn-sm btn-link" data-group="toutes_categories">Toutes les catégories</a>
+									</li>
+									<li>
+										<a class="filter btn btn-sm btn-link" data-group="détaillé">Projets Détaillés</a>
+									</li>
+									<li>
+										<a class="filter btn btn-sm btn-link" data-group="lien-direct">Liens fonctionnels</a>
+									</li>
+									<li>
+										<a class="filter btn btn-sm btn-link" data-group="prototype">Prototype</a>
+									</li>
+								</ul>
+
+								<!-- Portfolio Grid -->
+								<div class="portfolio-grid four-columns shuffle">
+									{% for project in projects %}
+										{% set dataGroups = ['toutes_categories'] %}
+
+										{% if 'détaillé' in project.category %}
+											{% set dataGroups = dataGroups|merge(['détaillé']) %}
+										{% endif %}
+										{% if 'lien-direct' in project.category %}
+											{% set dataGroups = dataGroups|merge(['lien-direct']) %}
+										{% endif %}
+										{% if 'prototype' in project.category %}
+											{% set dataGroups = dataGroups|merge(['prototype']) %}
+										{% endif %}
+
+										<figure class="item standard" data-groups='["{{ dataGroups|join('", "') }}"]'>
+											<div class="portfolio-item-img">
+												{% for image in project.images %}
+													<img src="{{ asset('image_project/'~image.name) }}" alt="{{ image.name }}"/>
+												{% endfor %}
+												<a href="{{ url('front_project_show', {id: project.id}) }}"></a>
+											</div>
+
+											<i class="far fa-file-alt"></i>
+											<h4 class="name">{{ project.title }}</h4>
+											<span class="category">{{ project.category|join(', ')|title }}</span>
+										</figure>
+									{% endfor %}
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 
