--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -78,12 +78,12 @@
 	</section>
 	{# ./ Services de l'Agence #}
 
-	<section class="hero">
-		<div class="container">
-			<div class="row align-items-center">
+	<section class="my-5">
+		<div class="container-fluid">
+			<div class="row gx-5 align-items-center justify-content-center px-5 pt-5  bg-primary text-white">
 				<div class="col-md-6">
 					<h1>BESOIN D'ÉCLAIRAGE ?</h1>
-					<p>Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre. Ne laissez pas les obstacles vous décourager. Au contraire, laissez-moi vous guider vers des solutions brillantes qui illuminent votre parcours.</p>
+					<p class="text-white">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
 				</div>
 				<div class="col-md-6">
 					<img src="{{ asset('img/presentation.svg') }}" alt="agence web dans la Nièvre (58)">
