edited app.css and home index

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -24,7 +24,7 @@
 							exceptionnelle ne se limite pas à la première étape.
 						</p>
 						<div class="flex-sm-column button_home justify-content-center" style="text-align: center;">
-							<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 inline-block">Obtenir un suivi 7j/7 <span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
+							<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 inline-block">Réaliser ma demande<span class="ml-2"><span class="fas fa-arrow-right"></span></span></a>
 							<a href="#agence" class="btn btn-danger mr-3 animate-up-2 inline-block">Découvrir l'agence<span class="ml-2"><span class="fas fa-arrow-down"></span></span></a><br>
 								<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="green" class="bi bi-check2-circle" viewBox="0 0 16 16">
 									<path d="M2.5 8a5.5 5.5 0 0 1 8.25-4.764.5.5 0 0 0 .5-.866A6.5 6.5 0 1 0 14.5 8a.5.5 0 0 0-1 0 5.5 5.5 0 1 1-11 0z"/>
