--- a/public/css/front/css/app.css
+++ b/public/css/front/css/app.css
@@ -146,3 +146,9 @@
         padding-top: 3rem;
     }
 }
+
+@media screen and (max-width: 400px) {
+    .home_background{
+        padding-top: 5rem;
+    }
+}
