--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,7 @@
 		<link rel="stylesheet" href="{{ asset('css/front/css/processus.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/new.css') }}">
 		<link rel="stylesheet" href="{{ asset('css/front/css/app.css')}}">
+		<link rel="stylesheet" href="{{ asset('css/front/css/canvas_style.css') }}">
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
 		{% endblock %}
@@ -100,8 +101,13 @@
 			{{ encore_entry_script_tags('validator') }}
 			{{ encore_entry_script_tags('main') }}
 			<script src="{{ asset('js/jquery.shuffle.min.js')}}"></script>
+<script src="{{ asset('js/plugins.swiper.js')}}"></script>
+
+
 			{#  <script src="{{ asset('js/particles.js')}}"></script>#}
 			{#	<script src="{{ asset('js/app.js')}}"></script> #}
+
+
 			<script>
 				document.addEventListener("DOMContentLoaded", function() {
 					const navbarMenu = document.getElementById("menu");
