--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -22,6 +22,14 @@
                     <h1>Et si nous discutions ?</h1>
                     <div class="page-subtitle">
                         <h4>Construisons quelque chose d'exceptionnel ensemble !</h4>
+<!-- Avis Google -->
+<div class="text-center">
+	<a class="nav-link" href="https://g.page/r/CSj9BKNjCGCBEAI/review">
+		<img src="{{ asset('img/rating.png')}}" class="mx-auto" alt="évaluez-nous" width="10%" height="10%">Évaluez-nous
+	</a>
+</div>
+
+
                     </div>
                 </div>
 
