edited landing page + added responsive multi devices mockup

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -21,21 +21,14 @@
 				<div class="row align-items-md-end">
 					<div class="col-lg-5 align-self-center flex-column py-6">
 						<div class="col-12 col-md-12 col-lg-12">
-
-						<h1 class="display-2 mb-4 text-center">Agence web
-							<br>
-							<span class="inline-block" style="background-color: dodgerblue;color:white;">Dans la Nièvre</span>
-						</h1>
-						<p class="lead mb-4 text-muted text-center">Grâce à mon expertise en développement Web, je vous accompagne dans
-														la création d'un site professionnel et attractif. Cependant, une conception
-														exceptionnelle ne se limite pas à la première étape.
-						</p>
-					</div>
+							<h1 class="display-2 mb-4 text-center">Agence web dans la Nièvre</h1>
+							<p class="lead mb-4 text-muted text-center">
+								Grâce à notre expertise en développement Web, je vous accompagne dans
+								la création d'un site professionnel et attractif. Cependant, une conception
+								exceptionnelle ne se limite pas à la première étape.
+							</p>
+						</div>
 						<div class="flex-sm-column button_home justify-content-center" style="text-align: center;">
-							<a href="{{ url('front_devis_new') }}" class="btn btn-tertiary mr-3 animate-up-2 inline-block">Réaliser ma demande<span class="ml-2">
-									<span class="fas fa-arrow-right"></span>
-								</span>
-							</a>
 							<a href="#agence" class="btn btn-danger mr-3 animate-up-2 inline-block">Découvrir l'agence<span class="ml-2">
 									<span class="fas fa-arrow-down"></span>
 								</span>
@@ -47,7 +40,6 @@
 							<strong>Aucune carte de crédit <span class="text-success">n'est requise</span>
 							</strong>
 						</div>
-
 					</div>
 					<div class="col-lg-7 dotted-bg">
 						<img src="img/man.png" alt="Client" class="d-flex align-self-end mt-5 z-1 mx-auto w-75 position-relative">
@@ -57,8 +49,17 @@
 
 		</section>
 
-		<div class="container mt-5 flex-row-reverse" id="agence">
-			<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Des solutions de développement web adaptées à tous les besoins</h1>
+	<div class="text-white bg-tertiary text-center vh-lg-25 vh-sm-40 pt-5">
+		<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
+		<p class="fw-bold mb-3 text-center lead text-white">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
+		<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
+			<span class="ml-2">
+				<span class="fas fa-arrow-right"></span>
+			</span>
+		</a>
+	</div>
+
+<div class="container" id="agence">
 			<p class="lead mb-4 text-muted text-center">Je conçois la solution optimale de développement web pour chaque
 							situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis
 							pour vos besoins uniques.
@@ -107,13 +108,13 @@
 
 		<section class="my-5">
 			<div class="container-fluid">
-				<div class="row gx-5 align-items-center justify-content-center px-5 pt-5  bg-primary text-white">
-					<div class="col-md-6">
+				<div class="row gx-5 align-items-center bg-black justify-content-center px-5 pt-5 text-white">
+					<div class="col-md-4">
 						<h1>BESOIN D'ÉCLAIRAGE ?</h1>
 						<p class="text-white">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
 					</div>
-					<div class="col-md-6">
-						<img src="{{ asset('img/presentation.svg') }}" alt="agence web dans la Nièvre (58)">
+					<div class="col-md-8">
+						<img src="{{ asset('img/home_section.jpg') }}" alt="agence web dans la Nièvre (58)" height="100%">
 					</div>
 				</div>
 				<div class="wrapper">
