edited home page

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -13,11 +13,10 @@
 			{% endfor %}
 		</div>
 
-		<!-- Hero
-		============================================= -->
+		{# hero home page #}
 		<section id="slider" class="slider-element" style="background: #2646532b url('img/hero-bg.png') center bottom no-repeat; background-size: 100% auto;">
 
-			<div class="container">
+			<div class="container vh-100">
 				<div class="row align-items-md-end">
 					<div class="col-lg-5 align-self-center flex-column py-6">
 						<div class="col-12 col-md-12 col-lg-12">
@@ -42,25 +41,24 @@
 						</div>
 					</div>
 					<div class="col-lg-7 dotted-bg">
-						<img src="img/man.png" alt="Client" class="d-flex align-self-end mt-5 z-1 mx-auto w-75 position-relative">
+						<img src="img/man.png" alt="Client" class="d-flex align-self-end mt-5 z-1 mx-auto w-75 position-relative" style="padding-top: 7rem;">
 					</div>
 				</div>
 			</div>
-
 		</section>
 
-	<div class="text-white bg-tertiary text-center vh-lg-25 vh-sm-40 pt-5">
-		<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
-		<p class="fw-bold mb-3 text-center lead text-white">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
-		<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
-			<span class="ml-2">
-				<span class="fas fa-arrow-right"></span>
-			</span>
-		</a>
-	</div>
+		<div class="text-white bg-tertiary text-center vh-lg-25 vh-sm-40 pt-5">
+			<h1 class="display-5 fw-bold lh-1 mb-3 text-center">Soyez Zen, On s'occupe de tout !</h1>
+			<p class="fw-bold mb-3 text-center lead text-white">Transitionnez de la planification au site grâce à ScriptZenIT, le créateur de sites Web destiné aux professionnels et aux artisans.</p>
+			<a href="{{ url('front_devis_new') }}" class="btn btn-black mr-3 animate-up-2 inline-block text-white">Démarrer ma demande
+				<span class="ml-2">
+					<span class="fas fa-arrow-right"></span>
+				</span>
+			</a>
+		</div>
 
-<div class="container" id="agence">
-			<p class="lead mb-4 text-muted text-center">Je conçois la solution optimale de développement web pour chaque
+		<div class="container" id="agence">
+			<p class="lead mb-4 text-muted text-center">On conçois la solution optimale de développement web pour chaque
 							situation spécifique, qu'il s'agisse de développer une plateforme complète ou de mettre en place des outils précis
 							pour vos besoins uniques.
 			</p>
