--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -16,7 +16,7 @@
 		{# hero home page #}
 		<section id="slider" class="slider-element" style="background: #2646532b url('img/hero-bg.png') center bottom no-repeat; background-size: 100% auto;">
 
-			<div class="container vh-100">
+			<div class="container">
 				<div class="row align-items-md-end">
 					<div class="col-lg-5 align-self-center flex-column py-6">
 						<div class="col-12 col-md-12 col-lg-12">
@@ -41,7 +41,7 @@
 						</div>
 					</div>
 					<div class="col-lg-7 dotted-bg">
-						<img src="img/man.png" alt="Client" class="d-flex align-self-end mt-5 z-1 mx-auto w-75 position-relative" style="padding-top: 7rem;">
+						<img src="img/man.png" alt="Client" class="d-flex align-self-end mt-5 z-1 mx-auto w-75 position-relative">
 					</div>
 				</div>
 			</div>
