removed disabled from contact

--- a/templates/front/contact/index.html.twig
+++ b/templates/front/contact/index.html.twig
@@ -91,7 +91,7 @@
                                         {{ form_row(form.phone, {'attr': {'class': 'form-control', 'placeholder': 'Téléphone'}}) }}
                                         {{ form_row(form.service) }}
                                         {{ form_row(form.content, {'attr': {'class': 'form-control', 'placeholder': 'Votre demande en quelques mots ...'}}) }}
-                                        <input type="submit" class="button btn-send disabled" value="Envoyer la demande">
+                                        <input type="submit" class="button btn-send" value="Envoyer la demande">
                                     </div>
                                 </div>
                             </div>
