--- a/templates/front/ticket/index.html.twig
+++ b/templates/front/ticket/index.html.twig
@@ -44,7 +44,7 @@
 								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ ticket.id) }}">
 
 								<svg class="bi mt-5 mb-3" width="48" height="48"><use xlink:href="#check2-circle"/></svg>
-								{% if ticket.status == 'En_cours' %}
+								{% if ticket.status == 'en_cours' %}
 									<h1 class="text-body-emphasis">Réponse du support </h1>
 								{% else %}
 									<h1 class="text-body-emphasis">Message de votre part </h1>
