removed jpg img switched to webp

--- a/templates/front/home/index.html.twig
+++ b/templates/front/home/index.html.twig
@@ -15,7 +15,6 @@
 
 		{# hero home page #}
 		<section id="slider" class="slider-element" style="background: #2646532b url('img/hero-bg.png') center bottom no-repeat; background-size: 100% auto;">
-
 			<div class="container">
 				<div class="row align-items-md-end">
 					<div class="col-lg-5 align-self-center flex-column py-6">
@@ -112,7 +111,7 @@
 						<p class="text-white">Transformez les défis techniques en opportunités. Lorsque vous êtes confronté à des problèmes techniques, vous faites face à des occasions de grandir et d'apprendre.</p>
 					</div>
 					<div class="col-md-8">
-						<img src="{{ asset('img/home_section.jpg') }}" alt="agence web dans la Nièvre (58)" height="100%">
+						<img src="{{ asset('img/home_section.webp') }}" alt="agence web dans la Nièvre (58)" height="100%">
 					</div>
 				</div>
 				<div class="wrapper">
