--- a/templates/front/includes/project.html.twig
+++ b/templates/front/includes/project.html.twig
@@ -19,7 +19,7 @@
 				</ul>
 
 				<!-- Portfolio Grid -->
-				<div class="portfolio-grid two-columns shuffle">
+				<div class="portfolio-grid four-columns shuffle">
 					{% for project in projects %}
 						{% set dataGroups = ['toutes_categories'] %}
 
